[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stagemarkt-api"
version = "0.1.0"
description = "An unofficial API wrapper for Stagemarkt.nl"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["aiohttp>=3.13.2", "brotli>=1.2.0", "xlsxwriter>=3.2.9"]

[project.optional-dependencies]
dev = ["ruff>=0.14.9"]

[tool.ruff]
fix = true # default: false
line-length = 125 # default: 88
include = [
    "stagemarkt",
    "stagemarkt/types",
    "stagemarkt/utils",
    "stagemarkt/models",
    "stagemarkt/internals",
]
exclude = ["**/__pycache__", "_build", "build", "dist", "docs"]
target-version = "py312"


[tool.ruff.lint]
preview = true
select = [
    "A",
    "ANN",
    "ASYNC",
    "B",
    "BLE",
    "C4",
    "COM",
    "DTZ",
    "E",
    "EM",
    "ERA",
    "F",
    "FA",
    "FBT",
    "FURB",
    "G",
    "I",
    "INP",
    "ISC",
    "NPY",
    "PD",
    "PERF",
    "PGH",
    "PIE",
    "PLC",
    "PLE",
    "PLW",
    "PTH",
    "PYI",
    "Q",
    "Q003",
    "RET",
    "RSE",
    "RUF",
    "S",
    "SIM",
    "SLOT",
    "T20",
    "TC",
    "TID",
    "TRY",
    "UP",
    "YTT",
]
ignore = [
    "ANN001",   # who annoates cls
    "ANN401",
    "ASYNC109", # dpy commonly uses this parameter
    "COM812",
    "EM101",    # in this case this is okay
    "F401",
    "F402",
    "F403",
    "F405",
    "INP001",   # due to how I load modules this results in annoyances
    "PD011",    # this is not a numpy codebase
    "PERF203",
    "PLC0414",  # pyright ruling for `as` imports needed
    "Q000",
    "RUF001",
    "RUF009",
    "S101",     # assert is used for type checking in this codebase
    "SIM105",
    "TRY003",   # over-eager rule
    "TRY301",   # unrealistic rule
    "UP034",
    "TC001",    # nah it doesn't have to go into TYPE_CHECKING
    "TC002",    # nah it doesn't have to go into TYPE_CHECKING
    "TC003",    # nah it doesn't have to go into TYPE_CHECKING
    "TID252",   # it's fine.
    "PIE790",   # this is a common pattern 
    "S311",
    "ASYNC240",
    "T201",
    "ERA001",   # Allow commented out code
]
unfixable = [
    "E501", # line length handled in other ways by ruff format
    "ERA",  # Don't delete commented out code
]

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"
# Like Black, indent with spaces, rather than tabs.
indent-style = "space"
# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false
# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"


[tool.ruff.lint.isort]
case-sensitive = true               # default: false
combine-as-imports = true           # default: false 
force-sort-within-sections = true   # default: false
force-to-top = ["future", "typing"] # default: []
force-wrap-aliases = true           # default: false
#required-imports = ["from __future__ import annotations"] # default: []
section-order = [
    "future",
    "standard-library",
    "third-party",
    "first-party",
    "local-folder",
] # default


[tool.ruff.lint.pydocstyle]
convention = "numpy"                    # default: none
ignore-decorators = ["typing.overload"] # default: []

[tool.ruff.lint.pylint]
max-args = 20 # default: 5 # lets not limit ourselves :)

[tool.ruff.lint.pyupgrade]
# Preserve types, even if a file imports `from __future__ import annotations`.
keep-runtime-typing = true # default: false


[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true   # default: false
ignore-fully-untyped = true # default: false
suppress-dummy-args = true  # default: false

[tool.ruff.lint.flake8-bandit]
check-typed-exception = true # default: false

[tool.ruff.lint.flake8-comprehensions]
allow-dict-calls-with-keyword-arguments = true # default: false

[tool.ruff.lint.flake8-type-checking]
strict = true

[tool.ruff.lint.flake8-unused-arguments]
ignore-variadic-names = true

[tool.ruff.lint.flake8-quotes]
inline-quotes = "double"

[tool.ruff.lint.flake8-tidy-imports.banned-api]
# https://discuss.python.org/t/problems-with-typeis/55410/6
# https://discuss.python.org/t/problems-with-typeis/55410/46
# Until what can go into a TypeIs/TypeGuard changes, these are just dangerous.
"typing.TypeIs".msg = "TypeIs is fundamentally unsafe, even when using it as described to be safe"
"typing.TypeGuard".msg = "TypeGuard is fundamentally unsafe"
"typing_extensions.TypeIs".msg = "TypeIs is fundamentally unsafe, even when using it as described to be safe"
"typing_extensions.TypeGuard".msg = "TypeGuard is fundamentally unsafe"
